--- a/entry.html
+++ b/entry.html
@@ -9,6 +9,6 @@
     <h1>201902664 is cool</h1>
     <h2></h2>
 
-    <script src="scripts/main.js"></script>
+    <script src="comnet/main.js"></script>
   </body>
 </html>
