--- a/entry.html
+++ b/entry.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="style.css" rel="stylesheet" />
+    <link href="comnet/style.css" rel="stylesheet" />
     <title>My test page</title>
   </head>
   <body>
     <h1>201902664 is cool</h1>
     <h2></h2>
 
-    <script src="main.js"></script>
+    <script src="comnet/main.js"></script>
   </body>
 </html>
